# saints-api

./: .env  .env.example  .gitignore  Cargo.toml  NOTES.md  README.md  TODO.md  package-lock.json  pom.xml
data/: README.md  TODO.md  createTables.sql  seedTest.sql
data/MPD-dbdiagram.io/: prompt.md
data/scripts/: extract_romcal_general_roman.js
data/seeds/: debugSQLJOIN.sql  instructions.md  newSEEDROMAN.sql  oldseedRomanSaintImages.sql  seedPlaces.sql  seedROMAN.sql  seedROMAN_links.sql  seedRomanImages.sql  seedRomanPatronages.sql  seedRomanSaintAttributes.sql  seedRomanSaintImages.sql  seedRomanSaintPatronages.sql  seedRomanSaints.sql  seedRomanSeasons.sql  seed_from_general_roman.sql
data/seeds/Roman_France/: seedRomanFrance.sql  seedRomanFranceAttributes.sql  seedRomanFranceFeastSaints.sql  seedRomanFranceImages.sql  seedRomanFranceSaintImages.sql  (+2 more)
data/source-romcal/: roman_wikipedia_list.md  romcal-general.ts
data/tests/: testVerifseedRoman.md
scripts/: convertImages.py  convertImagesBash.sh  convertImagesNode.mjs  db-reset.sh  generateDescriptions.py  scriptdiff.py
src/: config.rs  db.rs  main.rs  pagination.rs
src/api/: calendars.rs  celebrations.rs  feasts.rs  health.rs  mod.rs  saints.rs
src/core/: config.rs  db.rs  error.rs  feria.rs  liturgical_seasons.rs  mod.rs  movable_dates.rs  pagination.rs  router.rs  transfer_dates.rs  validation.rs
src/errors/: mod.rs
src/middleware/: auth.rs  cors.rs  mod.rs  rate_limiter.rs
src/models/: calendar.rs  celebration.rs  feast.rs  locale.rs  mod.rs  saint.rs
src/modules/: mod.rs
(+62 files in other folders)
